--- a/intro-exercises/package.json
+++ b/intro-exercises/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,17 @@
   "homepage": "https://github.com/ivanpo1/fullstackopen-typescript#readme",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
+    "@stylistic/eslint-plugin": "^5.4.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/express": "^5.0.3",
+    "eslint": "^9.36.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
